# ACP-test-fork

./: .gitignore  .gitmodules  README.md  setup.cfg
notebooks/: KL_epsilon_gamma.ipynb  KL_vs_sigma.ipynb  R_tests.ipynb  acp.ipynb  custom_training.ipynb  plot_result.ipynb  quickstart.ipynb  sbi_custom_training.ipynb  sbi_gelman_rubin.ipynb
scripts/: extrapolation.py  plot_KL_all.ipynb  plot_outputs.ipynb  plot_outputs_gauss.ipynb  plot_two_moons.ipynb  sbi_KL.py  sbi_KL_parallel.py  sbi_KL_parallel_tempering.py  sbi_KL_test.py  sbi_custom_training.py  sbi_custom_training_moons.py  utils.py
scripts/extrapolation_data/1000/: _1000_10.npz  network_0_1000_10.pth  network_0_231_10.pth  network_1_1000_10.pth  network_1_231_10.pth  network_2_1000_10.pth  network_3_1000_10.pth  network_4_1000_10.pth
scripts/notebooks_for_plots/: new_KL_vals.npz  plot_KL_all.ipynb  plot_KL_extrapolation.ipynb  plot_outputs.ipynb  plot_outputs_gauss.ipynb  plot_two_moons.ipynb
