[metadata]
name = acp-test
version = 0.1.0
author = James Alvey
author_email = jbga2@cam.ac.uk
description = Notebooks and submodules for ACP test project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/james-alvey-42/ACP-test
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    torch
	corner
	imageio
    sbi==0.23.3
    sbibm==1.0.6

